[package]
name = "serde-gen"
version = "0.1.0"
authors = ["yjh0502 <yjh0502@gmail.com>"]
edition = "2021"

[dependencies]
argh = "*"
env_logger = "0.9"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1.0.31"

[dev-dependencies]
argh = "*"
env_logger = "*"
log = "0.4"

[[example]]
name = "serde_gen"
